# ha-deyecloud

./: .devcontainer.json  .dockerignore  .gitignore  .ruff.toml  Dockerfile  LICENSE  README.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  docker-compose.yml  hacs.json  pyproject.toml  requirements.txt  requirements_test.txt
.github/workflows/: ci.yml  release.yml  validate.yml
config/: configuration.yaml
custom_components/deyecloud/: __init__.py  api.py  api_types.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  data.py  diagnostics.py  discovery.py  entity.py  exceptions.py  manifest.json  measure_point_cache.py  measure_points.py  migration.py  quality_scale.yaml  sensor.py  stale_entities.py  strings.json  subentry_sync.py
custom_components/deyecloud/translations/: ar.json  en.json
scripts/: _python.sh  build_zip  develop  docker  generate_brand_assets.py  lint  setup  test
tests/: conftest.py  test_api.py  test_api_edge_cases.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_discovery.py  test_entity_and_discovery.py  test_init.py  test_measure_point_cache.py  test_measure_point_cache_helpers.py  test_measure_points.py  test_sensor.py  test_stale_entities.py  test_strings.py  test_subentry_sync.py
tests/fixtures/: device_latest.json  devices.json  measure_points.json  station_latest.json  stations.json  token.json
